pp2/samples/rvalueincr.out

*** Error line 2.
    0++; // Error: Postfix increment can only be applied to lvalues
     ^^
*** syntax error

