pp2/samples/rvalueincr.decaf
int main() {
    0++; // Error: Postfix increment can only be applied to lvalues
}
